<resources>
    <string name="app_name">Aplicacion</string>
    <string name="obtener_contraseña">¿Has olvidado tu contraseña?</string>
    <string name="ingresar">Aceptar</string>
    <string name="registrar">O Registrar</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="registarse">Registrarse</string>
    <string name="Correo">Correo electronico</string>
    <string name="VolverPassword">Confirmar contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="Buscar">Buscar</string>
    <string name="title_activity_main_bottom_nav">MainActivityBottomNav</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_new">Novedades</string>
    <string name="title_filtro">Filtro</string>
    <string name="title_social">Social</string>
    <string name="title_config">Config</string>
    <string name="tituloPopular">Peliculas populares</string>
    <string name="nombre">"Nombre: "</string>
    <string name="correov">"Correo: "</string>
    <string name="edad">"Edad: "</string>
    <string name="apellidos">"Apellidos: "</string>
    <string name="actualizar">Actualizar datos</string>
    <string name="cambiarpas">actualizar contraseña</string>
    <string name="title_perfil">Perfil</string>
</resources>